==Revision 1514 (PointyHair)==   \# (major) FS: Inventory Manager   \# (major) FS: World Special Creatures Hide Create Group Buttons   \# (major) FS: Disable deactivate prompts in profile (ajax debuff)   \# (major) FS: New (Secure)Trade screens to fix composed pots   \# (major) FS: Begin removal of old map code   \# (major) FS: Quick links on New Map   \# (minor) FS: Make HCS menu remember collapsed section   \# (minor) FS: Fix quick send (items & gold)   \# (minor) FS: AJAX Guild Mailbox   \# (minor) FS: Fix last_login over 30 days   \# (minor) FS: Improve highlighting Guild Log   \# (minor) FS: Allow use of back in Arena and UFSG   \# (minor) FS: Fix pick moves screen in Arena   \# (minor) FS: Fix groups table widths for HiDPI screens   \# (minor) FS: Preference to prevent moving composing buttons

--- a/calfSystem.css
+++ b/calfSystem.css
@@ -1,3 +1,26 @@
+
+table#fshSettingsTable {
+  border-spacing: 10px;
+}
+
+.networkIcon {
+  display: inline-block;
+}
+
+.fshHelpTitle {
+  font-weight: bold;
+  color: #FFF380;
+}
+
+#fshWorldButtonContainer {
+  float: left;
+  height: 25.6px;
+}
+
+#fshWorldButtonContainer img {
+  padding-top: 1ex;
+}
+
 #fshSpinner {
   float: right;
   margin: 0 160px 0 0;
@@ -38,6 +61,7 @@ div#helperMenuDiv {
   position: absolute;
   color: black;
   font-size: 12px;
+  border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border:3px solid #cb7;
@@ -122,6 +146,7 @@ div#fshQuickLinks {
 }
 
 .reportLink {cursor:pointer; text-decoration:underline; color:blue;}
+.dropLink {cursor:pointer; text-decoration:underline; color:red;}
 .fshLink {cursor:pointer; text-decoration:underline;}
 
 .fshRed       {color: red;}
@@ -132,12 +157,12 @@ div#fshQuickLinks {
 .fshWhite     {color: white;}
 
 .fshCommon    {color: white;}
-.fshRare      {color: #0099ff;}
+.fshRare      {color: #3366ff;}
 .fshUnique    {color: #cc33ff;}
-.fshLegendary {color: #ffff00;}
+.fshLegendary {color: #ffff40;}
 .fshSuper     {color: #ff0000;}
 .fshCrystal   {color: #6633ff;}
-.fshEpic      {color: #00cc00;}
+.fshEpic      {color: #009933;}
 
 .fshCenter    {text-align: center;}
 .fshRight     {text-align: right;}
@@ -203,6 +228,8 @@ div#quickbuff div.buff-block p label.fshDim span {
   background-position: -270px -80px;
 }
 
+select.moveItem {font-size: xx-small; border: none; height: 11px;}
+
 table#fshBazaar {font-size: x-small;}
 table#fshBazaar span#warning {color: red; font-size: small}
 
@@ -236,7 +263,29 @@ div#fshCompConf {
 table.fshInvFilter {width: 100%;}
 table.fshInvFilter th {background-color: #cd9e4b;}
 
+#fshInv_filter input {width: 200px}
+
 .fshNumberInput {width: 3em;}
+
+.text-input-wrapper {
+  border:1px solid;
+  padding:1px 6px 1px 1px;
+  display:inline-block;
+  background: white;
+}
+.text-input-wrapper input {
+  border:none;
+  background:none;
+  outline:none;
+  padding:0 0;
+  margin:0 0;
+  font:inherit;
+}
+.text-input-wrapper span {
+  cursor:pointer;
+  color:blue;
+  font-weight:bold;
+}
 
 
 /*
@@ -248,7 +297,6 @@ table.dataTable {
   clear: both;
   border-collapse: separate;
   border-spacing: 0;
-  font-size:x-small;
   /*
    * Header and footer styles
    */
@@ -314,9 +362,11 @@ table.dataTable thead .sorting_asc_disabled {
 table.dataTable thead .sorting_desc_disabled {
   background-image: url("https://cdn.datatables.net/1.10.7/images/sort_desc_disabled.png");
 }
-table.dataTable tbody tr {
+
+table.dataTable.allow tbody tr {
   background-color: #e2b960;
 }
+
 table.dataTable tbody tr.selected {
   background-color: #B0BED9;
 }
@@ -346,7 +396,16 @@ table.dataTable.cell-border tbody tr:first-child th,
 table.dataTable.cell-border tbody tr:first-child td {
   border-top: none;
 }
+
+/*
+
 table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
+  background-color: #e7c473;
+}
+
+*/
+
+table.dataTable.allow.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
   background-color: #e7c473;
 }
 table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected {
